@@ -7910,3 +7910,6 @@ EPRINTS-3.1.2.1
 2008-03-24 tdb
  * Can now use Subject input component with other fields in a workflow
 
+2009-03-27 tdb
+ * Fixed to_string() calls not specifying noxmlns in Views (McSweeney)
+
